--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
+atomicwrites=1.4.0=py_0
+attrs=21.2.0=pyhd3eb1b0_0
 blas=1.0=mkl
 bottleneck=1.3.2=py39h7cc1a96_1
 brotli=1.0.9=ha925a31_2
 ca-certificates=2021.7.5=haa95532_1
 certifi=2021.5.30=py39haa95532_0
+colorama=0.4.4=pyhd3eb1b0_0
 cycler=0.10.0=py39haa95532_0
 fonttools=4.25.0=pyhd3eb1b0_0
 freetype=2.10.4=hd328e21_0
 icu=58.2=ha925a31_3
+iniconfig=1.1.1=pyhd3eb1b0_0
 intel-openmp=2021.3.0=haa95532_3372
 jpeg=9d=h2bbff1b_0
 kiwisolver=1.3.1=py39hd77b12b_0
@@ -22,17 +26,22 @@ mkl=2021.3.0=haa95532_524
 mkl-service=2.4.0=py39h2bbff1b_0
 mkl_fft=1.3.0=py39h277e83a_2
 mkl_random=1.2.2=py39hf11a4ad_0
+more-itertools=8.8.0=pyhd3eb1b0_0
 munkres=1.1.4=py_0
 numexpr=2.7.3=py39hb80d3ca_1
 numpy=1.20.3=py39ha4e8547_0
 numpy-base=1.20.3=py39hc2deb75_0
 olefile=0.46=pyhd3eb1b0_0
 openssl=1.1.1l=h2bbff1b_0
+packaging=21.0=pyhd3eb1b0_0
 pandas=1.3.3=py39h6214cd6_0
 pillow=8.3.1=py39h4fa10fc_0
 pip=21.2.4=py38haa95532_0
+pluggy=0.13.1=py39haa95532_0
+py=1.10.0=pyhd3eb1b0_0
 pyparsing=2.4.7=pyhd3eb1b0_0
 pyqt=5.9.2=py39hd77b12b_6
+pytest=6.2.4=py39haa95532_2
 python=3.9.7=h6244533_1
 python-dateutil=2.8.2=pyhd3eb1b0_0
 pytz=2021.1=pyhd3eb1b0_0
@@ -42,6 +51,7 @@ sip=4.19.13=py39hd77b12b_0
 six=1.16.0=pyhd3eb1b0_0
 sqlite=3.36.0=h2bbff1b_0
 tk=8.6.11=h2bbff1b_0
+toml=0.10.2=pyhd3eb1b0_0
 tornado=6.1=py39h2bbff1b_0
 tzdata=2021a=h5d7bf9c_0
 vc=14.2=h21ff451_1
